<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by RadenMas on 25/8/2022.
  ~ Copyright (c) 2022.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_aplikasi"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_account_circle"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tvHalo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/imgProfile"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/imgProfile"
            android:fontFamily="@font/cavilant"
            android:text="@string/halo"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvHalo"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/imgProfile"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/pebri_andriansyah"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/tvJam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ccocogoose"
            android:text="12:34"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvJam"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ccocogoose"
            android:text="12 Des 2022"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <com.github.anastr.speedviewlib.SpeedView
            android:id="@+id/speedViewLight"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="230dp"
            android:layout_marginTop="16dp"
            app:sv_indicatorLightColor="@android:color/holo_red_light"
            app:sv_markColor="@color/black"
            app:sv_maxSpeed="205"
            app:sv_minSpeed="0"
            app:sv_unit="℃"
            app:sv_unitTextSize="18sp"
            app:sv_withIndicatorLight="true"
            app:sv_withTremble="false" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnlightkroast"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="165dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/fastup"
            android:text="@string/light_roast"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnmediumRoast"
            android:layout_width="0dp"
            android:layout_height="165dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/fastup"
            android:text="@string/medium_roast"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btndarkRoast"
            android:layout_width="0dp"
            android:layout_height="165dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/fastup"
            android:text="@string/dark_roast"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnmanualRoast"
            android:layout_width="0dp"
            android:layout_height="165dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/fastup"
            android:text="@string/manual_roast"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>

